plugins {
    id 'org.akhikhl.gretty' version '2.0.0'
    id "org.hibernate.gradle.tools" version "1.2.5"
}

apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'idea'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
    runtime 'javax.servlet:jstl:+'
    compile 'org.springframework:spring-webmvc:5.0.3.RELEASE'
    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.0.4.RELEASE'
    compile 'org.hibernate:hibernate-core:5.2.13.Final'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
    compile group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'

    compile 'com.google.firebase:firebase-admin:6.2.0'

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.springframework', name: 'spring-test', version: '5.0.3.RELEASE'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.9.5'
    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
    testCompile group: 'com.jayway.jsonpath', name: 'json-path-assert', version: '2.4.0'
}

war {
    baseName = 'university.be'
    version = '1.0.0'
}

gretty {
    servletContainer 'tomcat8'
}

import org.hibernate.gradle.tools.Schema

database {
    catalog = ["university_se": new Schema()]
    basePackage = "it.unisalento.se.dao"
    port = 8889
    url = "jdbc:mysql://localhost"
    user = "root"
    password = "root"
    dialect = "org.hibernate.dialect.MySQLDialect"
    driver = "org.gjt.mm.mysql.Driver"
}